--- a/TWM/TWM.AngularClient/TWM/tsconfig.app.json
+++ b/TWM/TWM.AngularClient/TWM/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "jszip": [ "./node_modules/jszip/dist/jszip.min.js" ]
+    }
   },
   "include": [
     "src/**/*.ts"
