--- a/TWM/TWM.Api/TWM.Api.csproj
+++ b/TWM/TWM.Api/TWM.Api.csproj
@@ -6,12 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TWm.Business.Models\TWM.Business.Models.csproj" />
+    <ProjectReference Include="..\TWM.CoreHelpers\TWM.CoreHelpers.csproj" />
     <ProjectReference Include="..\TWM.Data\TWM.Data.csproj" />
   </ItemGroup>
 
