Auth implementation and changes in MyCountries funcionality

--- a/TWM/TWM.Data/TWM.Data.csproj
+++ b/TWM/TWM.Data/TWM.Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TWM.CoreHelpers\TWM.CoreHelpers.csproj" />
     <ProjectReference Include="..\TWM.Data.Domain\TWM.Data.Domain.csproj" />
   </ItemGroup>
 
