--- a/TWM/TWM.AngularClient/TWM/package.json
+++ b/TWM/TWM.AngularClient/TWM/package.json
@@ -26,6 +26,7 @@
     "angular-google-charts": "^0.1.3",
     "bootstrap": "4.3.1",
     "chart.js": "^2.5.0",
+    "component": "^1.1.0",
     "core-js": "^2.5.4",
     "devextreme": "^18.2.7",
     "devextreme-angular": "^18.2.7",
